# POO-2022

./: README.md
EjercicioEmpleados/: BasePlusCommissionEmployee.cpp  BasePlusCommissionEmployee.h  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  DailyEmployee.cpp  DailyEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
FigurasPolimorfismo-main/: README.md
FigurasPolimorfismo-main/Figuras Geometricas/: CMakeLists.txt  main.cpp
FigurasPolimorfismo-main/Figuras Geometricas/Model/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  Figura.cpp  Figura.h  Rectangulo.cpp  Rectangulo.h  TrianguloRectangulo.cpp  TrianguloRectangulo.h
FigurasPolimorfismo-main/Figuras Geometricas/View/: View.cpp  View.h
